---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 10. 04. 2019
  Bugfixes:
    - Addressed potential issue with technologies that have no ingredients
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 02. 04. 2019
  Bugfixes:
    - Fixed fatal Lua error when encountering lab whose deletion was not registered
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 31. 03. 2019
  Changes:
    - When encountering recognised non-fatal errors, DiscoScience will alert the user with a dialog instead of silently ignoring the issue.
  Bugfixes:
    - Fixed fatal Lua error when encountering a malformed entity callback
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 30. 03. 2019
  Changes:
    - Icon now looks cooler than the in-game graphics
  Bugfixes:
    - Fixed fatal Lua error when encountering unregistered lab. This should increase compatibility with mods that create entities without raising events.
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 20. 03. 2019
  Bugfixes:
    - Fixed fatal Lua error when encountering ingredient with unknown colour. Unknown ingredients now default to white.