@@ -2,4 +2,5 @@
 unregistered-lab-deleted=DiscoScience detected an unregistered lab. 
 unregistered-entity-created=DiscoScience detected an unspecified entity being created. 
 registered-lab-deleted=DiscoScience was not notified about a lab being deleted. 
+lab-registered-twice=DiscoScience was notified twice about a lab being created. 
 please-report=This usually means there is a minor mistake in another mod. Please report this issue at mods.factorio.com/mod/DiscoScience\n\nYou can keep playing, but some labs might not animate properly. This message will not appear again during this session.
